# ChangeLog for app-cdr/cdrtools
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.351 2015/02/25 22:00:37 vapier Exp $

  25 Feb 2015; Mike Frysinger <vapier@gentoo.org> cdrtools-3.01_alpha24.ebuild,
  cdrtools-3.01_alpha27.ebuild:
  Do not hardcode -L/usr/lib when linking -- it is both unnecessary and wrong as
  it breaks cross-compiling badly.

  19 Feb 2015; Mike Gilbert <floppym@gentoo.org> cdrtools-3.01_alpha17.ebuild,
  cdrtools-3.01_alpha24.ebuild, cdrtools-3.01_alpha27.ebuild:
  Use 'caps' use flag to toggle linkage against libcap. Fixup automagic linkage
  of libacl and libcap in 3.01_alpha27.

  18 Feb 2015; Rick Farina <zerochaos@gentoo.org> cdrtools-3.01_alpha17.ebuild,
  cdrtools-3.01_alpha24.ebuild, cdrtools-3.01_alpha27.ebuild:
  add missing RDEPEND on libcap per bug 540430

  14 Feb 2015; Daniel Pielmeier <billie@gentoo.org>
  -cdrtools-3.01_alpha25.ebuild:
  Remove old.

*cdrtools-3.01_alpha27 (30 Jan 2015)

  30 Jan 2015; Daniel Pielmeier <billie@gentoo.org>
  +cdrtools-3.01_alpha27.ebuild:
  Version bump.

*cdrtools-3.01_alpha25 (11 Oct 2014)

  11 Oct 2014; Daniel Pielmeier <billie@gentoo.org>
  +cdrtools-3.01_alpha25.ebuild:
  Version bump.

  21 Sep 2014; Patrick Lauer <patrick@gentoo.org> cdrtools-3.01_alpha17.ebuild,
  cdrtools-3.01_alpha24.ebuild:
  Whitespace

  21 Sep 2014; Robin H. Johnson <robbat2@gentoo.org>
  cdrtools-3.01_alpha17.ebuild, cdrtools-3.01_alpha24.ebuild:
  Bug #486680: do not create group-writable directories during build that would
  fail under grsec TPE.

  03 Aug 2014;  <tgall@gentoo.org> cdrtools-3.01_alpha24.ebuild:
  arm64, initial support

  10 Jun 2014; Daniel Pielmeier <billie@gentoo.org>
  -cdrtools-3.01_alpha23.ebuild:
  Remove old.

*cdrtools-3.01_alpha24 (04 Jun 2014)

  04 Jun 2014; Daniel Pielmeier <billie@gentoo.org>
  +cdrtools-3.01_alpha24.ebuild:
  Version bump.

  17 May 2014; Daniel Pielmeier <billie@gentoo.org>