@@ -1,6 +1,16 @@
-AUX twindistress-1.1.0-ldflags.patch 372 RMD160 af735f62ed817a5766459a23b4e86a127df3a7c5 SHA1 476182657ae9764e28c1b31cc8eb89bffb33bee5 SHA256 73760cc2d2e0b4a1d9ca3d763d2485e7127386d7139a06413f50012bea951f2f
-AUX twindistress-1.1.0-warnings.patch 3342 RMD160 7f05023866f768720162ec4c0d05262895993010 SHA1 05c842343098130516a94b0bc748de62e947828d SHA256 d94d8af1faa83596c43873388846632207a5daaf7b9c28695bf39b44d1c2d884
-DIST twind-1.1.0.tar.gz 2837845 RMD160 4d811a215ed7ec6aade657bf53760cfe8fd66c51 SHA1 4f13b10485fa644f199d321d70ac6057cdde349c SHA256 392a09e92862cf8a89a9b8c6f5ed7255c15c7f058a89d889c32f59ed8da73382
-EBUILD twindistress-1.1.0.ebuild 1539 RMD160 884824961495f749a3fb71c7a7460a8e8d4462aa SHA1 36b45574b4488c940f2376d142065aef7f1310a3 SHA256 9e96b61bc735bb66863a7c59b56068620174e52dabe6d680c6da26be1feca017
-MISC ChangeLog 1648 RMD160 1739752d28bb66c124898884c93a5223a8ed1774 SHA1 e2967a16696c8af66d0c6d3c09e91980ffab9d0d SHA256 a19a267a0bf717af4acb09abacc5a5a882ba31ebba0e44cd1aa661a930843e31
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX twindistress-1.1.0-ldflags.patch 372 SHA256 73760cc2d2e0b4a1d9ca3d763d2485e7127386d7139a06413f50012bea951f2f SHA512 5c19ffcfe2e9a451e95ac4d03da20cf54bf46ddc7bd369cc9e6c49a3215f8c39f50632d9e60167389859156c4df35ed7b813e1beb7a884c8ec0198f56a8d9f56 WHIRLPOOL 957c90d6202138accbf05056ea6eef217125db981f5c5e03ddcc8511cfb8a9ef40fb699ed82c71b40c8e15490bff68521275a702c08d8862470c93a82dd0324e
+AUX twindistress-1.1.0-warnings.patch 3342 SHA256 d94d8af1faa83596c43873388846632207a5daaf7b9c28695bf39b44d1c2d884 SHA512 20bb973c6dea47436333f9449c7b924c38744e74b8eed6646062e4a48c74156cba8fd17150f5a4f8dc19de68ee1c394eee8aa0f2f867a72bddbbb32278e9c304 WHIRLPOOL 9b36aae6a0fbc75e2429705405560b01e979cf57b01b7abb95fe713cf7de6e043740ece5bc0d053ab9f14a38e4e0308def4bca780ccd203f06411636ed90733e
+DIST twind-1.1.0.tar.gz 2837845 SHA256 392a09e92862cf8a89a9b8c6f5ed7255c15c7f058a89d889c32f59ed8da73382 SHA512 f1b3be3e5706ce244dd291b6fba2160605593e51b60344521025daf882509e164aa5c201c8d696e56a64d6f3525d16ecd3fd78cc1b86f39f401d4137b615fe8f WHIRLPOOL bd6c54f7d558d7a099c26aaa420908b2cbaecec7244f7e4ed2e3b1703ce7f433af88e70201a856e55e2d9c8644298c4ae7adae91b467f50507e7cf61a9be4a71
+EBUILD twindistress-1.1.0.ebuild 1507 SHA256 4c14ae2fbb899c7deb90763220b753f4484bc77ae159f89df43d0bed5bfd88af SHA512 34524fcc1bc507154c07b4ad57d88882d13bc50fdbf818bd49d15f7eff49c873c82e17b6123b4752d4b0ffc80dac43cdb0bef40291d838a0f4da3cce57f11d48 WHIRLPOOL 58d0aee08306e5d5e2983af16303ed160fa91458bd2fba761df3def917b6759897b4b4ef618146eac458cf4743f2ddd80d86433c613831851a6b0f95bb6217c6
+MISC ChangeLog 1732 SHA256 fd7c12f0101cb58f5013c3f84d86211ea0495a77f2589eaf32859dbe2d82a32a SHA512 f77cf9e4aab58d7a4be644e8bdcbb5e6b546cbdbb838d36112ff77a13ad8602cbd429ae97d114ec2ab02ecdce5d9fe17eb0268ceeea16d70e00de7bd77ae704b WHIRLPOOL 04ee12615247c5011969de687d929bc23932de898fb9b9254fa90fc244a4981ab4625307b690f87f0ff07cd88d5f8c41b776f869ee897412addd6abbd8c895e6
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTuSZMACgkQIY77eQFFFC2dfACgkhX0u3nMiUBptZbbJbcYdJqv
+akQAoLCJn5p2y/WVWH09lZmBrLQv8QCS
+=774P
+-----END PGP SIGNATURE-----
