@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
 DEPEND=media-libs/libsdl[video] media-libs/sdl-mixer media-libs/sdl-image[png]
 DESCRIPTION=Match and remove all of the blocks before time runs out
-EAPI=2
+EAPI=5
 HOMEPAGE=http://twind.sourceforge.net/
 KEYWORDS=amd64 ppc x86
 LICENSE=GPL-2
@@ -9,4 +9,4 @@ RDEPEND=media-libs/libsdl[video] media-libs/sdl-mixer media-libs/sdl-image[png] 
 SLOT=0
 SRC_URI=mirror://sourceforge/twind/twind-1.1.0.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=5e3e1f5a330f208a4ea8d88916644ae4
+_md5_=36c0487e88eb49ccbf07667d18d795bb
